# rp2040-dmxsun

./: .gitmodules  CMakeLists.txt  Doxyfile
.github/workflows/: kicad-exports.yml  pico-build.yml
hardware/baseboard_4slots/: baseboard_4slots.kicad_pcb
src/: CMakeLists.txt  acminterface.c  boardconfig.cpp  boardconfig.h  debug_struct.h  dmahandler.h  dmxbuffer.cpp  dmxbuffer.h  edp.cpp  edp.h  enc28j60_lwip_glue.c  enc28j60_lwip_glue.h  enumFactory.h  eth_w5500.cpp  eth_w5500.h  localdmx.cpp  localdmx.h  log.cpp  log.h  lwipopts.h  main.c  main.cpp  picotool_binary_information.h  pins.h  statusleds.h  stdio_usb.h  tusb_config.h  tusb_lwip_glue.c  tusb_lwip_glue.h  tx_dmx.pio  udp_artnet.cpp  udp_artnet.h  udp_e1_31.h  udp_edp.h  usb_EDP.h  usb_NodleU1.h  version.h  webserver.cpp  webserver.h  wireless.cpp  (+1 more)
wwwsrc/: package.json
wwwsrc/public/: debug.json
